--- a/LD17OpenJam/Assembly-CSharp.csproj
+++ b/LD17OpenJam/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\GameOverControllerScript.cs" />
      <Compile Include="Assets\MainMenuScript.cs" />
      <Compile Include="Assets\MenuControllerScript.cs" />
      <Compile Include="Assets\Script\GameController.cs" />
