--- a/LD17OpenJam/Assembly-CSharp.csproj
+++ b/LD17OpenJam/Assembly-CSharp.csproj
@@ -51,11 +51,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\GameOverControllerScript.cs" />
-     <Compile Include="Assets\MainMenuScript.cs" />
-     <Compile Include="Assets\MenuControllerScript.cs" />
      <Compile Include="Assets\Script\GameController.cs" />
+     <Compile Include="Assets\Script\GameOverControllerScript.cs" />
+     <Compile Include="Assets\Script\MainMenuScript.cs" />
+     <Compile Include="Assets\Script\MenuControllerScript.cs" />
      <Compile Include="Assets\Script\PlayerController.cs" />
+     <Compile Include="Assets\Script\TimeControllerScript.cs" />
      <Compile Include="Assets\Script\TrashScript.cs" />
  <Reference Include="UnityEngine.Analytics">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
