--- a/LD17OpenJam/Assembly-CSharp.csproj
+++ b/LD17OpenJam/Assembly-CSharp.csproj
@@ -56,6 +56,7 @@
      <Compile Include="Assets\Script\MainMenuScript.cs" />
      <Compile Include="Assets\Script\MenuControllerScript.cs" />
      <Compile Include="Assets\Script\PlayerController.cs" />
+     <Compile Include="Assets\Script\ScoreControllerScript.cs" />
      <Compile Include="Assets\Script\TimeControllerScript.cs" />
      <Compile Include="Assets\Script\TrashScript.cs" />
      <None Include="Assets\link.xml" />
