--- a/LD17OpenJam/Assembly-CSharp.csproj
+++ b/LD17OpenJam/Assembly-CSharp.csproj
@@ -52,6 +52,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\AboutControllerScript.cs" />
+     <Compile Include="Assets\EarthController.cs" />
      <Compile Include="Assets\Script\GameController.cs" />
      <Compile Include="Assets\Script\GameOverControllerScript.cs" />
      <Compile Include="Assets\Script\MainMenuScript.cs" />
